22 March 2017: Wouter
	- Fix #1238: segmentation fault when adding through the remote
	  interface a per-view local zone to a view with no previous
	  (configured) local zones.

21 March 2017: Ralph
	- Merge EDNS Client subnet implementation from feature branch into main
	  branch, using new EDNS processing framework. 

21 March 2017: Wouter
	- Fix doxygen for dnscrypt files.

20 March 2017: Wouter
	- #1217. DNSCrypt support, with --enable-dnscrypt, libsodium and then
	  enabled in the config file from Manu Bretelle.
	- make depend, autoconf, remove warnings about statement before var.
	- lru_demote and lruhash_insert_or_retrieve functions for getdns.
	- fixup for lruhash (whitespace and header file comment).
	- dnscrypt tests.

17 March 2017: Wouter
	- Patch for view functionality for local-data-ptr from Björn Ketelaars.
	- Fix #1237 - Wrong resolving in chain, for norec queries that get
	  SERVFAIL returned.

16 March 2017: Wouter
	- Fix that SHM is not inited if not enabled.
	- Add trustanchor.unbound CH TXT that gets a response with a number
	  of TXT RRs with a string like "example.com. 2345 1234" with
	  the trust anchors and their keytags.
	- Fix that looped DNAMEs do not cause unbound to spend effort.
	- trustanchor tags are sorted.  reusable routine to fetch taglist.

13 March 2017: Wouter
	- testbound understands Deckard MATCH rcode question answer commands.
	- Fix #1235: Fix too long DNAME expansion produces SERVFAIL instead
	  of YXDOMAIN + query loop, reported by Petr Spacek.

10 March 2017: Wouter
	- Fix #1234: shortening DNAME loop produces duplicate DNAME records
	  in ANSWER section.

9 March 2017: Wouter
	- --disable-sha1 disables SHA1 support in RRSIG, so from DNSKEY and
	  DS records.  NSEC3 is not disabled.
	- fake-sha1 test option; print warning if used.  To make unit tests.
	- unbound-control list local zone and data commands listed in the
	  help output.

8 March 2017: Wouter
	- make depend for build dependencies.